--- a/project/frontend/templates/base.html
+++ b/project/frontend/templates/base.html
@@ -5,15 +5,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--Boostrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+
+
     {%block title%}<title>Base</title>{%endblock%}
 
+
+    <!-- CSS - Estilização do Container-->
+    <style type='text/css'>
+        body {
+            background-image: linear-gradient(to right, rgb(42, 1, 117), rgb(0, 255, 221));
+        }
+        #task-container {
+            max-width: 600px;
+            margin: 0 auto;
+            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+            background-color: #fff;
+
+            margin-top: 100px;
+            margin-bottom: 100px;
+
+            justify-content: space-around;
+            align-items: flex-start;
+
+        }
+        #form-wrapper {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0rem;
+            border-bottom: 1px solid #e9e9e9;
+            background-color: #fff;
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.25);
+            padding: 40px;
+        }
+        #submit {
+            background-color: #365cd9;
+            border-radius: 0;
+            border: 0;
+            color: #fff;
+        }
+        .flex-wrapper {
+            display: flex;
+        }
+        .task-wrapper {
+            margin: 5px;
+            padding: 5px;
+            padding: 20px;
+            cursor: pointer;
+            border-bottom: 1px solid #e9e9e9;
+            color: #686868;
+        }
+    </style>
+    
 </head>
 
-<body>
 
+
+<body>
     {%block content%}
     {%endblock%}
-
 </body>
 
 </html>
