--- a/project/frontend/templates/home.html
+++ b/project/frontend/templates/home.html
@@ -7,5 +7,31 @@
 
 
 {%block content%}
-<h2>Página do Home</h2>
+
+
+<div class="container">
+
+    <div id="task-container">
+        <div id="form-wrapper">
+            <form id="form">
+                <div class="flex-wrapper">
+                    <div style="flex: 6">
+                        <input id="title" class="form-control" type="text" name="title" placeholder="Add task">
+                    </div>
+                    <div style="flex: 1">
+                        <input id="submit" class="btn" type="submit" >
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div id="list-wrapper">
+        
+        </div>	
+    </div>
+
+</div>
+
+
+
 {%endblock%}
