--- a/project/frontend/templates/base.html
+++ b/project/frontend/templates/base.html
@@ -19,7 +19,7 @@
     <!-- CSS - Estilização do Container-->
     <style type='text/css'>
         body {
-            background-image: linear-gradient(to right, rgb(42, 1, 117), rgb(0, 255, 221));
+            background-image: linear-gradient(to right, rgb(66, 34, 124), rgb(0, 80, 69));
         }
         #task-container {
             max-width: 600px;
@@ -44,7 +44,7 @@
             padding: 40px;
         }
         #submit {
-            background-color: #365cd9;
+            background-color: #7440d3;
             border-radius: 0;
             border: 0;
             color: #fff;
