--- a/project/frontend/templates/home.html
+++ b/project/frontend/templates/home.html
@@ -1,6 +1,7 @@
 {%extends 'base.html'%}
 
 
+
 {%block title%}
 <title>Home</title>
 {%endblock%}
@@ -8,29 +9,8 @@
 
 {%block content%}
 
-
-<div class="container">
-
-    <div id="task-container">
-        <div id="form-wrapper">
-            <form id="form">
-                <div class="flex-wrapper">
-                    <div style="flex: 6">
-                        <input id="title" class="form-control" type="text" name="title" placeholder="Add task">
-                    </div>
-                    <div style="flex: 1">
-                        <input id="submit" class="btn" type="submit" >
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        <div id="list-wrapper">
-        
-        </div>	
-    </div>
-
-</div>
+    {%include 'task_painel.html'%}
+    {%include 'client_painel.html'%}
 
 
 
