Finalizando Projeto Crud + rest APi

--- a/project/frontend/templates/navbar.html
+++ b/project/frontend/templates/navbar.html
@@ -1,15 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-          
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Rest Api
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./api/task/">Task</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="./api/client/">Client</a></li>
-            </ul>
 
-      </div>
-    </div>
-  </nav>
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+    aria-expanded="false" style='font-size:20px;'>
+    Rest Api
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <li><a class="dropdown-item" href="./api/task/">Task</a></li>
+    <li>
+      <hr class="dropdown-divider">
+    </li>
+    <li><a class="dropdown-item" href="./api/client/">Client</a></li>
+  </ul>
+
+  <a class="nav-link active" aria-current="page" href="https://github.com/miguelzeph/Django_rest_framework_teste/tree/master/project">
+    Source Code
+  </a>
+
+  </div>
+  </div>
+</nav>
