--- a/project/frontend/templates/client_painel.html
+++ b/project/frontend/templates/client_painel.html
@@ -1,15 +1,24 @@
+
 <div class="container">
     <div id="task-container">
         <h3 align="center">Client</h3>
         <div id="form-wrapper">
-            <form id="form">
+            <form id="form" method="POST" action="{%url 'create_client'%}">
+                {%csrf_token%}
                 <div class="flex-wrapper">
                     <div style="flex: 6">
-                        <input id="title" class="form-control" type="text" name="title" placeholder="Add task">
+                        <input class="form-control" type="text" name="name" placeholder="Name">
                     </div>
+                    
                     <div style="flex: 1">
                         <input id="submit" class="btn" type="submit">
                     </div>
+
+                </div>
+
+                <br>
+                <div style="width:60px;">
+                    <input class="form-control" type="text" name="age" placeholder="Age">
                 </div>
             </form>
         </div>
@@ -18,7 +27,7 @@
 
         </div>
 
-        
+
         {%if client%}
         {%for dados in client %}
         <div id="data-row-${i}" class="task-wrapper flex-wrapper">
@@ -26,24 +35,31 @@
                 Name: <span class="title">{{dados.name}}</span>&ensp;&ensp;&ensp;
                 Age: <span class="title">{{dados.age}}</span>                
             </div>
-            
             <div style="flex:1">
-                <button class="btn btn-sm btn-outline-success edit">Edit </button>
+
+                <a href='./api/client/{{dados.id}}'>
+                    <button class="btn btn-sm btn-outline-success edit">
+                        Edit
+                    </button>
+                </a>
             </div>
             <div style="flex:1">
-                <button class="btn btn-sm btn-outline-danger delete">x</button>
+                <a href = "{%url 'delete_client' dados.id%}">
+                    <button class="btn btn-sm btn-outline-danger delete">
+                        Del
+                    </button>
+                </a>
             </div>
         </div>
         {%endfor%}
 
         {%else%}
         <div id="data-row-${i}" class="task-wrapper flex-wrapper">
-            <span class="title">Don't have client yet...</span>
+            <span class="title">Don't have clients yet...</span>
         </div>
 
         {%endif%}
 
-
-
     </div>
+
 </div>
