--- a/project/frontend/templates/task_painel.html
+++ b/project/frontend/templates/task_painel.html
@@ -1,12 +1,12 @@
-
 <div class="container">
     <div id="task-container">
         <h3 align="center">Task</h3>
         <div id="form-wrapper">
-            <form id="form" methods = "POST" action="#">
+            <form id="form" method="POST" action="{%url 'create_task'%}">
+                {%csrf_token%}
                 <div class="flex-wrapper">
                     <div style="flex: 6">
-                        <input id="title" class="form-control" type="text" name="title" placeholder="Add task">
+                        <input class="form-control" type="text" name="title" placeholder="Add a Task...">
                     </div>
 
                     <div style="flex: 1">
@@ -14,8 +14,8 @@
                     </div>
                 </div>
                 <div class="form-check" style="float:right">
-                    <input type="checkbox" class="form-check-input" name = 'completed' id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Completed</label>
+                    <input type="checkbox" class="form-check-input" name='completed' id="">
+                    <label class="form-check-label" for="xxx">Completed</label>
                 </div>
             </form>
         </div>
@@ -24,7 +24,7 @@
 
         </div>
 
-        
+
         {%if task%}
         {%for dados in task %}
         <div id="data-row-${i}" class="task-wrapper flex-wrapper">
@@ -38,10 +38,19 @@
             </div>
             {%endif%}
             <div style="flex:1">
-                <button class="btn btn-sm btn-outline-success edit">Edit </button>
+
+                <a href='./api/task/{{dados.id}}'>
+                    <button class="btn btn-sm btn-outline-success edit">
+                        Edit
+                    </button>
+                </a>
             </div>
             <div style="flex:1">
-                <button class="btn btn-sm btn-outline-danger delete">x</button>
+                <a href = "{%url 'delete_task' dados.id%}">
+                    <button class="btn btn-sm btn-outline-danger delete">
+                        Del
+                    </button>
+                </a>
             </div>
         </div>
         {%endfor%}
@@ -56,4 +65,3 @@
     </div>
 
 </div>
-
